--- a/microservice-base/microservice-gateway/microservice-gateway-web/src/main/resources/bootstrap.yml
+++ b/microservice-base/microservice-gateway/microservice-gateway-web/src/main/resources/bootstrap.yml
@@ -6,6 +6,7 @@ spring:
       discovery:
         server-addr: 10.233.76.32:8848,10.69.73.32:8848,10.89.148.32:8848
         namespace: microservice-prod
+        group: microservice
       config:
         server-addr: 10.233.76.32:8848,10.69.73.32:8848,10.89.148.32:8848
         namespace: microservice-prod
