完成丘钛上传接口

--- a/microservice-production/microservice-package-api/src/main/resources/bootstrap.yml
+++ b/microservice-production/microservice-package-api/src/main/resources/bootstrap.yml
@@ -1,12 +1,10 @@
 spring:
-  application:
-    name: microservice-package-api
   cloud:
     nacos:
       discovery:
         server-addr: 10.233.76.32:8848,10.69.73.32:8848,10.89.148.32:8848
         namespace: microservice-prod
-        group: microservice-base
+        group: microservice
       config:
         server-addr: 10.233.76.32:8848,10.69.73.32:8848,10.89.148.32:8848
         namespace: microservice-prod
@@ -15,3 +13,15 @@ spring:
     sentinel:
       transport:
         dashboard: k8s.aacoptics.com:30844
+
+---
+spring:
+  profiles: xnyprod
+  application:
+    name: microservice-package-api-xny
+
+---
+spring:
+  profiles: xbprod
+  application:
+    name: microservice-package-api-xb
