--- a/microservice-functional/microservice-notification/src/main/resources/bootstrap.yml
+++ b/microservice-functional/microservice-notification/src/main/resources/bootstrap.yml
@@ -5,7 +5,7 @@ spring:
     nacos:
       discovery:
         server-addr: 10.233.76.32:8848,10.69.73.32:8848,10.89.148.32:8848
-        namespace: microservice-prod
+        namespace: microservice
         group: microservice-functional
       config:
         server-addr: 10.233.76.32:8848,10.69.73.32:8848,10.89.148.32:8848
