--- a/microservice-functional/microservice-notification/pom.xml
+++ b/microservice-functional/microservice-notification/pom.xml
@@ -31,6 +31,7 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>3.5.1</version>
         </dependency>
         <dependency>
             <groupId>com.aliyun</groupId>
