--- a/microservice-production/microservice-package-api/src/main/resources/bootstrap.yml
+++ b/microservice-production/microservice-package-api/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
-#  application:
-#    name: microservice-package-api-xny
+  application:
+    name: microservice-package-api-xny
   cloud:
     nacos:
       discovery:
