--- a/microservice-vue/package.json
+++ b/microservice-vue/package.json
@@ -22,6 +22,7 @@
     "qs": "^6.10.1",
     "url": "^0.11.0",
     "uuid": "^8.3.2",
+    "vcrontab": "^0.3.5",
     "vue": "^3.2.13",
     "vue-cropperjs": "^5.0.0",
     "vue-echarts": "^6.0.0",
