添加苏州配置

--- a/microservice-production/microservice-package-api/src/main/resources/bootstrap.yml
+++ b/microservice-production/microservice-package-api/src/main/resources/bootstrap.yml
@@ -27,3 +27,9 @@ spring:
   profiles: xbprod
   application:
     name: microservice-package-api-xb
+
+---
+spring:
+  profiles: szprod
+  application:
+    name: microservice-package-api-sz
