--- a/microservice-functional/pom.xml
+++ b/microservice-functional/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>microservice-mobile-attendance</module>
         <module>microservice-notification</module>
+        <module>microservice-sep-server</module>
     </modules>
 
     <packaging>pom</packaging>
