--- a/microservice-production/microservice-gaia-api/pom.xml
+++ b/microservice-production/microservice-gaia-api/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
             <version>3.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
