添加映射到公网的网关

--- a/microservice-base/microservice-gateway/pom.xml
+++ b/microservice-base/microservice-gateway/pom.xml
@@ -20,6 +20,8 @@
     <modules>
         <module>microservice-gateway-admin</module>
         <module>microservice-gateway-web</module>
+        <module>microservice-gateway-public-admin</module>
+        <module>microservice-gateway-public-web</module>
     </modules>
 
     <dependencies>
