修改spring cloud alibaba版本

--- a/microservice-production/pom.xml
+++ b/microservice-production/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>microservice-package-api</module>
         <module>microservice-gaia-api</module>
+        <module>wlg-iot-dashboard</module>
     </modules>
 
     <packaging>pom</packaging>
