添加文字转语音接口

--- a/microservice-functional/pom.xml
+++ b/microservice-functional/pom.xml
@@ -11,6 +11,7 @@
         <module>microservice-mobile-attendance</module>
         <module>microservice-notification</module>
         <module>microservice-sep-server</module>
+        <module>microservice-jacob-provider</module>
     </modules>
 
     <packaging>pom</packaging>
