--- a/microservice-production/microservice-wlg-report/pom.xml
+++ b/microservice-production/microservice-wlg-report/pom.xml
@@ -58,6 +58,16 @@
             <artifactId>spire.xls.free</artifactId>
             <version>5.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
