--- a/microservice-production/pom.xml
+++ b/microservice-production/pom.xml
@@ -12,6 +12,7 @@
         <module>microservice-gaia-api</module>
         <module>wlg-iot-dashboard</module>
         <module>microservice-wlg-report</module>
+        <module>microservice-dingtalk-notification</module>
     </modules>
 
     <packaging>pom</packaging>
