新增飞书集成BI系统单点登录模块

--- a/microservice-production/pom.xml
+++ b/microservice-production/pom.xml
@@ -13,6 +13,7 @@
         <module>wlg-iot-dashboard</module>
         <module>microservice-wlg-report</module>
         <module>iot-mold-toollife</module>
+        <module>microservice-bi-sso</module>
     </modules>
 
     <packaging>pom</packaging>
