--- a/microservice-production/iot-fanuc-dashboard/src/main/resources/bootstrap.yml
+++ b/microservice-production/iot-fanuc-dashboard/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
-  application:
-    name: iot-fanuc-dashboard-xny
+#  application:
+#    name: iot-fanuc-dashboard-xny
   cloud:
     nacos:
       discovery:
@@ -16,20 +16,20 @@ spring:
       transport:
         dashboard: k8s.aacoptics.com:30844
 
-#---
-#spring:
-#  profiles: xnyprod
-#  application:
-#    name: iot-fanuc-dashboard-xny
-#
-#---
-#spring:
-#  profiles: xbprod
-#  application:
-#    name: iot-fanuc-dashboard-xb
-#
-#---
-#spring:
-#  profiles: szprod
-#  application:
-#    name: iot-fanuc-dashboard-sz
+---
+spring:
+  profiles: xnyprod
+  application:
+    name: iot-fanuc-dashboard-xny
+
+---
+spring:
+  profiles: xbprod
+  application:
+    name: iot-fanuc-dashboard-xb
+
+---
+spring:
+  profiles: szprod
+  application:
+    name: iot-fanuc-dashboard-sz
