--- a/microservice-production/pom.xml
+++ b/microservice-production/pom.xml
@@ -15,6 +15,7 @@
         <module>iot-mold-toollife</module>
         <module>iot-fanuc-dashboard</module>
         <module>microservice-bi-sso</module>
+        <module>iot-czech</module>
     </modules>
 
     <packaging>pom</packaging>
