--- a/microservice-production/pom.xml
+++ b/microservice-production/pom.xml
@@ -16,6 +16,7 @@
         <module>iot-fanuc-dashboard</module>
         <module>microservice-bi-sso</module>
         <module>iot-czech</module>
+        <module>iot-lenspacker-dashboard</module>
     </modules>
 
     <packaging>pom</packaging>
