添加镀膜机服务

--- a/microservice-production/pom.xml
+++ b/microservice-production/pom.xml
@@ -17,6 +17,7 @@
         <module>microservice-bi-sso</module>
         <module>iot-czech</module>
         <module>iot-lenspacker-dashboard</module>
+        <module>iot-coating-dashboard</module>
     </modules>
 
     <packaging>pom</packaging>
