--- a/microservice-production/pom.xml
+++ b/microservice-production/pom.xml
@@ -18,6 +18,7 @@
         <module>iot-czech</module>
         <module>iot-lenspacker-dashboard</module>
         <module>iot-coating-dashboard</module>
+        <module>iot-general-dashboard</module>
     </modules>
 
     <packaging>pom</packaging>
