--- a/microservice-functional/microservice-notification/pom.xml
+++ b/microservice-functional/microservice-notification/pom.xml
@@ -78,6 +78,11 @@
             <artifactId>spring-integration-mqtt</artifactId>
             <version>5.2.8.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>e-iceblue</groupId>
+            <artifactId>spire.xls.free</artifactId>
+            <version>5.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
