--- a/microservice-functional/microservice-mobile-attendance/src/main/resources/bootstrap.yml
+++ b/microservice-functional/microservice-mobile-attendance/src/main/resources/bootstrap.yml
@@ -5,8 +5,8 @@ spring:
     nacos:
       discovery:
         server-addr: 10.233.76.32:8848,10.69.73.32:8848,10.89.148.32:8848
-        namespace: microservice
-        group: microservice-functional
+        namespace: microservice-prod
+        group: microservice
       config:
         server-addr: 10.233.76.32:8848,10.69.73.32:8848,10.89.148.32:8848
         namespace: microservice-prod
