--- a/microservice-functional/microservice-notification/pom.xml
+++ b/microservice-functional/microservice-notification/pom.xml
@@ -34,9 +34,9 @@
             <version>3.5.1</version>
         </dependency>
         <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>alibaba-dingtalk-service-sdk</artifactId>
-            <version>2.0.0</version>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
         </dependency>
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
