--- a/microservice-functional/microservice-mobile-attendance/pom.xml
+++ b/microservice-functional/microservice-mobile-attendance/pom.xml
@@ -28,6 +28,16 @@
             <artifactId>microservice-common-feign</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>21.5.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
