WLG设备管理初始提交

--- a/microservice-production/pom.xml
+++ b/microservice-production/pom.xml
@@ -19,6 +19,7 @@
         <module>iot-lenspacker-dashboard</module>
         <module>iot-coating-dashboard</module>
         <module>iot-general-dashboard</module>
+        <module>microservice-wlg-equipment</module>
     </modules>
 
     <packaging>pom</packaging>
