--- a/microservice-functional/microservice-mobile-attendance/pom.xml
+++ b/microservice-functional/microservice-mobile-attendance/pom.xml
@@ -46,6 +46,11 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/src/main/resources/lib/sapjco3.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
