--- a/microservice-functional/microservice-mobile-attendance/pom.xml
+++ b/microservice-functional/microservice-mobile-attendance/pom.xml
@@ -38,14 +38,6 @@
             <artifactId>ojdbc8</artifactId>
             <version>21.5.0.0</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.sapjco</groupId>
-            <artifactId>sapjco3</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/lib/sapjco3.jar</systemPath>
-        </dependency>
         <dependency>
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
@@ -77,6 +69,19 @@
                             <!-- 它如何将一个普通的jar重新打包为一个可执行的fat jar -->
                             <goal>repackage</goal>
                         </goals>
+                    </execution>
+                    <execution>
+                        <id>com.sapjco-sapjco3</id>
+                        <phase>clean</phase>
+                        <configuration>
+                            <file>${project.basedir}/src/main/resources/lib/sapjco3.jar</file>
+                            <repositoryLayout>default</repositoryLayout>
+                            <groupId>com.sapjco</groupId>
+                            <artifactId>sapjco3</artifactId>
+                            <version>1.0-SNAPSHOT</version>
+                            <packaging>jar</packaging>
+                            <generatePom>true</generatePom>
+                        </configuration>
                     </execution>
                 </executions>
                 <configuration>
