SAP获取照片上传飞书拆分出单独模块

--- a/microservice-functional/pom.xml
+++ b/microservice-functional/pom.xml
@@ -13,6 +13,7 @@
         <module>microservice-sep-server</module>
         <module>microservice-jacob-provider</module>
         <module>microservice-sale-message</module>
+        <module>microservice-feishu-photo</module>
     </modules>
 
     <packaging>pom</packaging>
