--- a/microservice-functional/microservice-feishu-photo/pom.xml
+++ b/microservice-functional/microservice-feishu-photo/pom.xml
@@ -9,8 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>microservice-mobile-attendance</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>microservice-feishu-photo</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -39,6 +38,13 @@
             <version>21.5.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.sap.conn.jco</groupId>
+            <artifactId>sapjco3</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/lib/sapjco3.jar</systemPath>
+        </dependency>
         <dependency>
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
@@ -73,6 +79,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <includeSystemScope>true</includeSystemScope>
                     <excludes>
                         <!-- 打包排除lombok -->
                         <exclude>
