--- a/microservice-production/microservice-wlg-equipment/pom.xml
+++ b/microservice-production/microservice-wlg-equipment/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>microservice-common-feign</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
