--- a/microservice-production/microservice-wlg-equipment/pom.xml
+++ b/microservice-production/microservice-wlg-equipment/pom.xml
@@ -20,12 +20,23 @@
     <dependencies>
         <dependency>
             <groupId>com.aacoptics</groupId>
-            <artifactId>microservice-webapps-parent</artifactId>
+            <artifactId>microservice-base</artifactId>
             <version>1.0.0</version>
+            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>com.aacoptics</groupId>
-            <artifactId>microservice-common-feign</artifactId>
+            <artifactId>microservice-common-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>21.1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aacoptics</groupId>
+            <artifactId>microservice-webapps-parent</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
@@ -33,18 +44,36 @@
             <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
             <version>3.5.1</version>
         </dependency>
+        <!-- 使用 lombok 简化 Java 代码 -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <!-- 热加载 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        <!--测试框架-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
             <version>2.3.0</version>
         </dependency>
         <dependency>
-            <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc8</artifactId>
-            <version>21.5.0.0</version>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>3.5.1</version>
         </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
