镜头模流和注塑闭环管理数据解析代码提交

--- a/microservice-production/pom.xml
+++ b/microservice-production/pom.xml
@@ -19,6 +19,7 @@
         <module>iot-lenspacker-dashboard</module>
         <module>iot-coating-dashboard</module>
         <module>iot-general-dashboard</module>
+        <module>microservice-data-analysis-api</module>
     </modules>
 
     <packaging>pom</packaging>
