--- a/microservice-functional/microservice-jacob-provider/pom.xml
+++ b/microservice-functional/microservice-jacob-provider/pom.xml
@@ -33,21 +33,21 @@
             <artifactId>jave</artifactId>
             <version>1.0.5</version>
         </dependency>
-        <dependency>
-            <groupId>com.hynnet</groupId>
-            <artifactId>jacob</artifactId>
-            <version>1.20</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.hynnet</groupId>-->
+<!--            <artifactId>jacob</artifactId>-->
+<!--            <version>1.20</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.aliyun</groupId>
             <artifactId>alibaba-dingtalk-service-sdk</artifactId>
             <version>2.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>org</groupId>
-            <artifactId>jaudiotagger</artifactId>
-            <version>2.0.3</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org</groupId>-->
+<!--            <artifactId>jaudiotagger</artifactId>-->
+<!--            <version>2.0.3</version>-->
+<!--        </dependency>-->
     </dependencies>
     <build>
         <plugins>
