--- a/microservice-functional/microservice-hikvision-api/pom.xml
+++ b/microservice-functional/microservice-hikvision-api/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>artemis-http-client</artifactId>
             <version>1.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
