添加自动同步域账号

--- a/microservice-functional/pom.xml
+++ b/microservice-functional/pom.xml
@@ -15,6 +15,7 @@
         <module>microservice-sale-message</module>
         <module>microservice-feishu-photo</module>
         <module>microservice-hikvision-api</module>
+        <module>microservice-ldap-sync</module>
     </modules>
 
     <packaging>pom</packaging>
