--- a/microservice-production/microservice-budget-report/pom.xml
+++ b/microservice-production/microservice-budget-report/pom.xml
@@ -11,7 +11,9 @@
 
     <artifactId>microservice-budget-report</artifactId>
 
-
+    <properties>
+        <poi.version>4.1.1</poi.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>com.aacoptics</groupId>
@@ -72,6 +74,16 @@
             <groupId>com.aacoptics</groupId>
             <artifactId>microservice-common-feign</artifactId>
             <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${poi.version}</version>
         </dependency>
     </dependencies>
 
