--- a/microservice-production/microservice-data-analysis-api/pom.xml
+++ b/microservice-production/microservice-data-analysis-api/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>microservice-webapps-parent</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
