--- a/microservice-production/microservice-data-analysis-api/pom.xml
+++ b/microservice-production/microservice-data-analysis-api/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>commons-net</artifactId>
             <version>3.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
