--- a/microservice-functional/microservice-okr-core/pom.xml
+++ b/microservice-functional/microservice-okr-core/pom.xml
@@ -24,6 +24,11 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
+            <groupId>com.aacoptics</groupId>
+            <artifactId>microservice-common-feign</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
             <version>3.5.1</version>
