--- a/microservice-functional/microservice-okr-core/src/main/resources/bootstrap.yml
+++ b/microservice-functional/microservice-okr-core/src/main/resources/bootstrap.yml
@@ -15,3 +15,6 @@ spring:
     sentinel:
       transport:
         dashboard: k8s.aacoptics.com:30844
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
