--- a/microservice-production/microservice-wlg-equipment/pom.xml
+++ b/microservice-production/microservice-wlg-equipment/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>${poi.version}</version>
         </dependency>
+        <dependency>
+            <groupId>e-iceblue</groupId>
+            <artifactId>spire.xls.free</artifactId>
+            <version>5.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
