--- a/microservice-production/iot-temphumidity/pom.xml
+++ b/microservice-production/iot-temphumidity/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
             <version>3.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.aacoptics</groupId>
+            <artifactId>microservice-common-feign</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
