--- a/microservice-functional/microservice-notification/pom.xml
+++ b/microservice-functional/microservice-notification/pom.xml
@@ -83,6 +83,11 @@
             <artifactId>spire.xls.free</artifactId>
             <version>5.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.jsqlparser</groupId>
+            <artifactId>jsqlparser</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
