WLG性能数据已出广播开发

--- a/microservice-functional/pom.xml
+++ b/microservice-functional/pom.xml
@@ -17,6 +17,7 @@
         <module>microservice-hikvision-api</module>
         <module>microservice-ldap-sync</module>
         <module>microservice-okr-core</module>
+        <module>microservice-wlg-broadcast</module>
     </modules>
 
     <packaging>pom</packaging>
