--- a/microservice-production/iot-fanuc-dashboard/src/main/resources/bootstrap.yml
+++ b/microservice-production/iot-fanuc-dashboard/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
-  application:
-    name: iot-fanuc-dashboard-xny
+#  application:
+#    name: iot-fanuc-dashboard-xny
   cloud:
     nacos:
       discovery:
