--- a/microservice-production/iot-fanuc-dashboard/pom.xml
+++ b/microservice-production/iot-fanuc-dashboard/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>spring-integration-mqtt</artifactId>
             <version>5.2.8.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.aacoptics</groupId>
+            <artifactId>microservice-common-feign</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
